Made the data volume for mysql a standalone named volume defined by compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,8 @@ services:
     ports:
       - "3307:3306"
     volumes:
+      - mysqldata:/var/lib/mysql:rw
       - ./volumes/conf.d:/etc/mysql/conf.d
-    volumes_from:
-      - mysql_data
-  mysql_data:
-    build:
-      context: ./datadir
-      dockerfile: Dockerfile
+volumes:
+    mysqldata:
+        driver: local
